[package]
name = "rp2350-esp-flasher"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = "0.7.2"
cortex-m-rt = "0.7"
critical-section = {version = "1.2.0"}
defmt = "0.3"
embedded-hal = "1.0.0"
embedded-io = "0.6.1"
fugit = "0.3.6"
heapless = "0.8.0"
nb = "1.1"
panic-halt = "0.2.0"
pio = "0.2.0"
pio-proc = "0.2.0"
usb-device = {version = "0.3.2", features = ["control-buffer-256"]}
usbd-serial = {version = "0.2.2"}
static_cell = "2.1.0"
rp235x-hal = { version = "0.2.0", features = ["binary-info", "critical-section-impl", "rt", "defmt"] }
